--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -1,4 +1,19 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700');
-
 @import "helpers/**/*.scss";
 @import "components/**/*.scss";
+
+
+.imgs {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+
+    &__img {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
